--- a/httpclient/pom.xml
+++ b/httpclient/pom.xml
@@ -7,7 +7,7 @@
 		<version>3.4.6</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>httpclient5</artifactId>
+	<artifactId>httpclient</artifactId>
 
 	<dependencies> 
 		<dependency>
