--- a/pom.xml
+++ b/pom.xml
@@ -12,61 +12,62 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.14.1</log4j-core>
-		<fastjson>1.2.76</fastjson>
-		<hibernate-core>5.4.30.Final</hibernate-core>
-		<mysql-connector-java>8.0.23</mysql-connector-java>
-		<netty-all>4.1.63.Final</netty-all>
-		<mongo-java-driver>3.12.8</mongo-java-driver>
-		<influxdb-java>2.21</influxdb-java>
-		<flink-java>1.12.2</flink-java>
-		<jedis>3.5.2</jedis>
-		<seata>1.4.1</seata>
-		<kafka-clients>2.7.0</kafka-clients>
-		<sofa-rpc>5.7.7</sofa-rpc>
-		<guava>30.1.1-jre</guava>
-		<elasticsearch>7.12.0</elasticsearch>
-		<poi>5.0.0</poi>
-		<tomcat-embed>9.0.45</tomcat-embed>
-		<nacos-client>2.0.0</nacos-client>
-		<hadoop-client>3.3.0</hadoop-client>
-		<protobuf-java>3.15.7</protobuf-java>
-		<httpclient5>5.0.3</httpclient5>
-		<okhttp>4.9.1</okhttp>
+		<log4j-core>2.16.0</log4j-core>
+		<fastjson>1.2.78</fastjson>
+		<hibernate-core>5.5.8.Final</hibernate-core><!-- 5.6.1 -->
+		<mysql-connector-java>8.0.27</mysql-connector-java>
+		<netty-all>4.1.72.Final</netty-all>
+		<mongo-java-driver>3.12.10</mongo-java-driver>
+		<influxdb-java>2.22</influxdb-java>
+		<flink-java>1.14.0</flink-java>
+		<jedis>3.7.0</jedis>
+		<seata>1.4.2</seata>
+		<kafka-clients>2.8.1</kafka-clients><!-- 3.0.0 -->
+		<sofa-rpc>5.8.1</sofa-rpc>
+		<guava>31.0.1-jre</guava>
+		<elasticsearch>7.15.2</elasticsearch><!-- 7.16.0 -->
+		<poi>5.1.0</poi>
+		<tomcat-embed>9.0.55</tomcat-embed><!-- 10.0.13 -->
+		<nacos-client>2.0.3</nacos-client>
+		<hadoop-client>3.3.1</hadoop-client>
+		<protobuf-java>3.19.1</protobuf-java>
+		<httpclient5>5.1.2</httpclient5>
+		<okhttp>4.9.3</okhttp>
 		<retrofit>2.9.0</retrofit>
-		<HikariCP>4.0.3</HikariCP>
-		<solr-solrj>8.8.1</solr-solrj>
-		<snakeyaml>1.28</snakeyaml>
-		<opencsv>5.4</opencsv>
-		<druid>1.2.5</druid> 
-		<curator-framework>5.1.0</curator-framework>
-		<hbase-client>2.4.2</hbase-client> 
-		<commons-compress>1.20</commons-compress> 
-		<xstream>1.4.16</xstream>
-		<dom4j>2.1.3</dom4j>  
+		<HikariCP>5.0.0</HikariCP>
+		<solr-solrj>8.11.0</solr-solrj>
+		<snakeyaml>1.29</snakeyaml>
+		<opencsv>5.5.2</opencsv>
+		<druid>1.2.8</druid>
+		<shiro>1.8.0</shiro>
+		<curator-framework>5.2.0</curator-framework>
+		<hbase-client>2.4.8</hbase-client>
+		<commons-compress>1.21</commons-compress>
+		<xstream>1.4.18</xstream>
+		<dom4j>2.1.3</dom4j>
+
 		<!-- 
-		<commons-pool2>2.9.0</commons-pool2>
-		<disruptor>3.4.2</disruptor>
-		<quartz>2.3.2</quartz> 
+		<commons-pool2>2.9.0</commons-pool2>	2.11.1
+		<disruptor>3.4.2</disruptor>	3.4.4
+		<quartz>2.3.2</quartz>
 		<commons-email>1.5</commons-email>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
-		
 		<dependency>
 			<groupId>com.lmax</groupId>
 			<artifactId>disruptor</artifactId>
 			<version>${disruptor}</version>
 		</dependency>
-           <dependency>
+		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>${quartz}</version>
 		</dependency>
-           <dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
 			<version>${commons-email}</version>
 		</dependency>
-           <dependency>
+		<dependency>
 			<groupId>com.whalin</groupId>
 			<artifactId>Memcached-Java-Client</artifactId>
 			<version>${Memcached-Java-Client}</version>
@@ -76,7 +77,7 @@
 			<artifactId>commons-pool2</artifactId>
 			<version>${commons-pool2}</version>
 		</dependency>
-		 -->
+		-->
 	</properties>
 
 	<modules>
@@ -88,7 +89,7 @@
 		<module>email</module>
 		<module>excel</module>
 		<module>hbase</module>
-		<module>httpclient5</module>
+		<module>httpclient</module>
 		<module>http</module>
 		<module>image</module>
 		<module>json</module>
@@ -103,6 +104,7 @@
 		<module>rpc</module>
 		<module>socket</module>
 		<module>solr</module>
+		<module>shiro</module>
 		<module>tomcat</module>
 		<module>web</module>
 		<module>websocket</module>
@@ -161,7 +163,7 @@
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
-				<artifactId>httpclient5</artifactId>
+				<artifactId>httpclient</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -232,6 +234,11 @@
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>solr</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>shiro</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -328,7 +335,7 @@
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongo-java-driver</artifactId>
 				<version>${mongo-java-driver}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
@@ -338,7 +345,7 @@
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-slf4j-impl</artifactId>
 				<version>${log4j-core}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka-clients</artifactId>
@@ -383,7 +390,7 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>${poi}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.elasticsearch.client</groupId>
 				<artifactId>elasticsearch-rest-high-level-client</artifactId>
@@ -398,7 +405,7 @@
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>${mysql-connector-java}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>redis.clients</groupId>
 				<artifactId>jedis</artifactId>
@@ -488,6 +495,11 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>druid</artifactId>
 				<version>${druid}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.shiro</groupId>
+				<artifactId>shiro-core</artifactId>
+				<version>${shiro}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
