--- a/log4j/pom.xml
+++ b/log4j/pom.xml
@@ -28,5 +28,9 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 		</dependency> 
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor</artifactId> 
+		</dependency>
 	</dependencies>
 </project>
