--- a/pom.xml
+++ b/pom.xml
@@ -5,58 +5,52 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.8</version>
+		<version>1.9</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.4.8</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.17.0</log4j-core>
+		<log4j-core>2.17.1</log4j-core>
 		<fastjson>1.2.79</fastjson>
-		<hibernate-core>5.5.9.Final</hibernate-core><!-- 5.6.3 -->
-		<mysql-connector-java>8.0.27</mysql-connector-java>
-		<netty-all>4.1.72.Final</netty-all>
+		<hibernate-core>5.6.4.Final</hibernate-core> 
+		<mysql-connector-java>8.0.28</mysql-connector-java>
+		<netty-all>4.1.73.Final</netty-all>
 		<mongo-java-driver>3.12.10</mongo-java-driver>
 		<influxdb-java>2.22</influxdb-java>
-		<flink-java>1.14.2</flink-java>
-		<jedis>3.8.0</jedis><!-- 4.0.0 -->
+		<flink-java>1.14.3</flink-java>
+		<jedis>4.0.1</jedis>
 		<seata>1.4.2</seata>
-		<kafka-clients>2.8.1</kafka-clients><!-- 3.0.0 -->
-		<sofa-rpc>5.8.1</sofa-rpc>
+		<kafka-clients>3.1.0</kafka-clients> 
+		<sofa-rpc>5.8.2</sofa-rpc>
 		<guava>31.0.1-jre</guava>
-		<elasticsearch>7.15.2</elasticsearch><!-- 7.16.2 -->
-		<poi>5.1.0</poi>
-		<tomcat-embed>9.0.56</tomcat-embed><!-- 10.0.14 -->
-		<nacos-client>2.0.3</nacos-client>
+		<elasticsearch>7.16.3</elasticsearch> 
+		<poi>5.2.0</poi>
+		<tomcat-embed>10.0.16</tomcat-embed> 
+		<nacos-client>2.0.4</nacos-client>
 		<hadoop-client>3.3.1</hadoop-client>
-		<protobuf-java>3.19.1</protobuf-java>
+		<protobuf-java>3.19.3</protobuf-java>
 		<httpclient5>5.1.2</httpclient5>
 		<okhttp>4.9.3</okhttp>
-		<retrofit>2.9.0</retrofit>
-		<HikariCP>5.0.0</HikariCP>
+		<retrofit>2.10.6</retrofit> 
+		<HikariCP>5.0.1</HikariCP>
 		<solr-solrj>8.11.1</solr-solrj>
 		<snakeyaml>1.30</snakeyaml>
 		<opencsv>5.5.2</opencsv>
 		<druid>1.2.8</druid>
 		<shiro>1.8.0</shiro>
 		<curator-framework>5.2.0</curator-framework>
-		<hbase-client>2.4.8</hbase-client>
+		<hbase-client>2.4.9</hbase-client>
 		<commons-compress>1.21</commons-compress>
 		<xstream>1.4.18</xstream>
 		<dom4j>2.1.3</dom4j>
+		<disruptor>3.4.4</disruptor>
 
-		<!-- 
-		<commons-pool2>2.9.0</commons-pool2>	2.11.1
-		<disruptor>3.4.2</disruptor>	3.4.4
+		<!--   
 		<quartz>2.3.2</quartz>
 		<commons-email>1.5</commons-email>
-		<Memcached-Java-Client>3.0.2</Memcached-Java-Client>
-		<dependency>
-			<groupId>com.lmax</groupId>
-			<artifactId>disruptor</artifactId>
-			<version>${disruptor}</version>
-		</dependency>
+		<Memcached-Java-Client>3.0.2</Memcached-Java-Client> 
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
@@ -71,12 +65,7 @@
 			<groupId>com.whalin</groupId>
 			<artifactId>Memcached-Java-Client</artifactId>
 			<version>${Memcached-Java-Client}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-pool2</artifactId>
-			<version>${commons-pool2}</version>
-		</dependency>
+		</dependency> 
 		-->
 	</properties>
 
@@ -367,7 +356,7 @@
 				<version>${okhttp}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.squareup.retrofit2</groupId>
+				<groupId>io.github.zawn.retrofit2</groupId>
 				<artifactId>retrofit</artifactId>
 				<version>${retrofit}</version>
 			</dependency>
@@ -500,6 +489,11 @@
 				<groupId>org.apache.shiro</groupId>
 				<artifactId>shiro-core</artifactId>
 				<version>${shiro}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.lmax</groupId>
+				<artifactId>disruptor</artifactId>
+				<version>${disruptor}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
