--- a/memcache/pom.xml
+++ b/memcache/pom.xml
@@ -14,5 +14,9 @@
 			<groupId>com.weicoder</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-pool2</artifactId> 
+		</dependency>
 	</dependencies>
 </project>
