--- a/pom.xml
+++ b/pom.xml
@@ -5,48 +5,50 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.9</version>
+		<version>1.9.1</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.4.9</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.17.1</log4j-core>
-		<fastjson>1.2.79</fastjson>
-		<hibernate-core>5.6.4.Final</hibernate-core> 
+		<log4j-core>2.17.2</log4j-core>
+		<fastjson>1.2.80</fastjson>
+		<hibernate-core>5.6.7.Final</hibernate-core> <!-- 6.0.0.Final -->
 		<mysql-connector-java>8.0.28</mysql-connector-java>
-		<netty-all>4.1.73.Final</netty-all>
+		<netty-all>4.1.75.Final</netty-all>
 		<mongo-java-driver>3.12.10</mongo-java-driver>
 		<influxdb-java>2.22</influxdb-java>
-		<flink-java>1.14.3</flink-java>
-		<jedis>4.0.1</jedis>
+		<flink-java>1.14.4</flink-java>
+		<jedis>4.2.1</jedis>
 		<seata>1.4.2</seata>
 		<kafka-clients>3.1.0</kafka-clients> 
-		<sofa-rpc>5.8.2</sofa-rpc>
-		<guava>31.0.1-jre</guava>
-		<elasticsearch>7.16.3</elasticsearch> 
-		<poi>5.2.0</poi>
-		<tomcat-embed>10.0.16</tomcat-embed> 
+		<sofa-rpc>5.8.3</sofa-rpc>
+		<guava>31.1-jre</guava>
+		<elasticsearch-java>8.1.2</elasticsearch-java>
+		<poi>5.2.2</poi>
+		<tomcat-embed>10.0.20</tomcat-embed> 
 		<nacos-client>2.0.4</nacos-client>
-		<hadoop-client>3.3.1</hadoop-client>
-		<protobuf-java>3.19.3</protobuf-java>
-		<httpclient5>5.1.2</httpclient5>
+		<hadoop-client>3.3.2</hadoop-client>
+		<protobuf-java>3.20.0</protobuf-java>
+		<httpclient5>5.1.3</httpclient5>
 		<okhttp>4.9.3</okhttp>
 		<retrofit>2.10.6</retrofit> 
 		<HikariCP>5.0.1</HikariCP>
 		<solr-solrj>8.11.1</solr-solrj>
 		<snakeyaml>1.30</snakeyaml>
-		<opencsv>5.5.2</opencsv>
+		<opencsv>5.6</opencsv>
 		<druid>1.2.8</druid>
-		<shiro>1.8.0</shiro>
-		<curator-framework>5.2.0</curator-framework>
-		<hbase-client>2.4.9</hbase-client>
-		<commons-compress>1.21</commons-compress>
-		<xstream>1.4.18</xstream>
-		<dom4j>2.1.3</dom4j>
+		<shiro>1.9.0</shiro>
+		<curator-framework>5.2.1</curator-framework>
+		<hbase-client>2.4.11</hbase-client>
 		<disruptor>3.4.4</disruptor>
-
+		<commons-pool2>2.11.1</commons-pool2>  
+		<jackson-databind>2.13.2.2</jackson-databind> 
+		<commons-compress>1.21</commons-compress>
+		<xstream>1.4.19</xstream>
+		<dom4j>2.1.3</dom4j>
+		 
 		<!--   
 		<quartz>2.3.2</quartz>
 		<commons-email>1.5</commons-email>
@@ -379,11 +381,16 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>${poi}</version>
+			</dependency> 
+			<dependency>
+				<groupId>co.elastic.clients</groupId>
+				<artifactId>elasticsearch-java</artifactId>
+				<version>${elasticsearch-java}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.elasticsearch.client</groupId>
-				<artifactId>elasticsearch-rest-high-level-client</artifactId>
-				<version>${elasticsearch}</version>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson-databind}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.zaxxer</groupId>
@@ -494,6 +501,11 @@
 				<groupId>com.lmax</groupId>
 				<artifactId>disruptor</artifactId>
 				<version>${disruptor}</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.apache.commons</groupId>
+			  <artifactId>commons-pool2</artifactId>
+			  <version>${commons-pool2}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
