--- a/flink/pom.xml
+++ b/flink/pom.xml
@@ -16,7 +16,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.flink</groupId>
-			<artifactId>flink-clients_2.12</artifactId>
+			<artifactId>flink-clients</artifactId>
 		</dependency>
 	</dependencies>
 </project>
