--- a/pom.xml
+++ b/pom.xml
@@ -14,37 +14,37 @@
 	<properties>
 		<log4j-core>2.17.2</log4j-core>
 		<fastjson>1.2.80</fastjson>
-		<fastjson2>2.0.1</fastjson2>
-		<hibernate-core>5.6.8.Final</hibernate-core>
-		<hibernate-envers>6.0.0.Final</hibernate-envers>
-		<mysql-connector-java>8.0.28</mysql-connector-java>
-		<netty-all>4.1.76.Final</netty-all>
-		<mongo-java-driver>3.12.10</mongo-java-driver>
+		<fastjson2>2.0.3</fastjson2>
+		<hibernate-core>5.6.9.Final</hibernate-core>
+		<hibernate-envers>6.0.1.Final</hibernate-envers>
+		<mysql-connector-java>8.0.29</mysql-connector-java>
+		<netty-all>4.1.77.Final</netty-all>
+		<mongo-java-driver>3.12.11</mongo-java-driver>
 		<influxdb-java>2.22</influxdb-java>
-		<flink-java>1.14.4</flink-java>
-		<jedis>4.2.2</jedis>
-		<seata>1.4.2</seata>
-		<kafka-clients>3.1.0</kafka-clients> 
-		<sofa-rpc>5.8.3</sofa-rpc>
+		<flink-java>1.15.0</flink-java>
+		<jedis>4.2.3</jedis>
+		<seata>1.5.1</seata>
+		<kafka-clients>3.2.0</kafka-clients> 
+		<sofa-rpc>5.8.5</sofa-rpc>
 		<guava>31.1-jre</guava>
-		<elasticsearch-java>8.1.2</elasticsearch-java>
+		<elasticsearch-java>8.2.0</elasticsearch-java>
 		<poi>5.2.2</poi>
-		<tomcat-embed>10.0.20</tomcat-embed> 
-		<nacos-client>2.0.4</nacos-client>
-		<hadoop-client>3.3.2</hadoop-client>
-		<protobuf-java>3.20.0</protobuf-java>
+		<tomcat-embed>10.0.21</tomcat-embed> 
+		<nacos-client>2.1.0</nacos-client>
+		<hadoop-client>3.3.3</hadoop-client>
+		<protobuf-java>3.20.1</protobuf-java>
 		<httpclient5>5.1.3</httpclient5>
 		<okhttp>4.9.3</okhttp>
 		<retrofit>2.10.6</retrofit> 
 		<HikariCP>5.0.1</HikariCP>
-		<solr-solrj>8.11.1</solr-solrj>
+		<solr-solrj>9.0.0</solr-solrj>
 		<snakeyaml>1.30</snakeyaml>
 		<opencsv>5.6</opencsv>
 		<druid>1.2.9</druid>
 		<shiro>1.9.0</shiro>
 		<curator-framework>5.2.1</curator-framework>
-		<hbase-client>2.4.11</hbase-client> 
-		<jackson-databind>2.13.2.2</jackson-databind>  
+		<hbase-client>2.4.12</hbase-client> 
+		<jackson-databind>2.13.3</jackson-databind>  
 		<xstream>1.4.19</xstream> 
 		<disruptor>3.4.4</disruptor> 
 		<commons-compress>1.21</commons-compress>
@@ -100,6 +100,7 @@
 		<module>hbase</module>
 		<module>httpclient</module>
 		<module>http</module>
+		<module>hibernate6</module>
 		<module>image</module>
 		<module>json</module>
 		<module>kafka</module>
@@ -127,6 +128,16 @@
 		<module>flink</module>
 		<module>seata</module>
 	</modules>
+	
+	<profiles> 
+		<profile>
+			<id>jdk8</id>
+			<properties>
+				<HikariCP>4.0.3</HikariCP>
+				<solr-solrj>8.11.1</solr-solrj>
+			</properties>
+		</profile>
+	</profiles>
 
 	<dependencyManagement>
 		<dependencies>  
@@ -178,6 +189,11 @@
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>http</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>hibernate6</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -391,6 +407,11 @@
 				<version>${hibernate-envers}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.hibernate.orm</groupId>
+				<artifactId>hibernate-hikaricp</artifactId>
+				<version>${hibernate-envers}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-core</artifactId>
 				<version>${hibernate-core}</version>
@@ -487,7 +508,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-clients_2.12</artifactId>
+				<artifactId>flink-clients</artifactId>
 				<version>${flink-java}</version>
 			</dependency>
 			<dependency>
