--- a/pom.xml
+++ b/pom.xml
@@ -12,38 +12,38 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.17.2</log4j-core>
-		<fastjson>1.2.83</fastjson>
-		<fastjson2>2.0.5</fastjson2>
-		<hibernate-core>5.6.9.Final</hibernate-core>
-		<hibernate-envers>6.0.2.Final</hibernate-envers>
+		<log4j-core>2.18.0</log4j-core>
+		<fastjson>2.0.9</fastjson> 
+		<hibernate-core>5.6.10.Final</hibernate-core>
+		<hibernate-envers>6.1.1.Final</hibernate-envers>
 		<mysql-connector-java>8.0.29</mysql-connector-java>
-		<netty-all>4.1.77.Final</netty-all>
+		<netty-all>4.1.79.Final</netty-all>
 		<mongo-java-driver>3.12.11</mongo-java-driver>
-		<influxdb-java>2.22</influxdb-java>
-		<flink-java>1.15.0</flink-java>
+		<influxdb-java>2.23</influxdb-java>
+		<flink-java>1.15.1</flink-java>
 		<jedis>4.2.3</jedis>
-		<seata>1.5.1</seata>
+		<jsoup>1.15.2</jsoup>
+		<seata>1.5.2</seata>
 		<kafka-clients>3.2.0</kafka-clients> 
 		<sofa-rpc>5.8.5</sofa-rpc>
 		<guava>31.1-jre</guava>
-		<elasticsearch-java>8.2.2</elasticsearch-java>
+		<elasticsearch-java>8.3.2</elasticsearch-java>
 		<poi>5.2.2</poi>
-		<tomcat-embed>10.0.21</tomcat-embed> 
+		<tomcat-embed>10.0.22</tomcat-embed> 
 		<nacos-client>2.1.0</nacos-client>
 		<hadoop-client>3.3.3</hadoop-client>
-		<protobuf-java>3.21.1</protobuf-java>
+		<protobuf-java>3.21.2</protobuf-java>
 		<httpclient5>5.1.3</httpclient5>
-		<okhttp>4.9.3</okhttp>
+		<okhttp>4.10.0</okhttp>
 		<retrofit>2.10.6</retrofit> 
 		<HikariCP>5.0.1</HikariCP>
 		<solr-solrj>9.0.0</solr-solrj>
 		<snakeyaml>1.30</snakeyaml>
 		<opencsv>5.6</opencsv>
-		<druid>1.2.10</druid>
-		<shiro>1.9.0</shiro>
-		<curator-framework>5.2.1</curator-framework>
-		<hbase-client>2.4.12</hbase-client> 
+		<druid>1.2.11</druid>
+		<shiro>1.9.1</shiro>
+		<curator-framework>5.3.0</curator-framework>
+		<hbase-client>2.4.13</hbase-client> 
 		<jackson-databind>2.13.3</jackson-databind>  
 		<xstream>1.4.19</xstream> 
 		<disruptor>3.4.4</disruptor> 
@@ -100,6 +100,7 @@
 		<module>hbase</module>
 		<module>httpclient</module>
 		<module>http</module>
+		<module>html</module>
 		<module>hibernate6</module>
 		<module>image</module>
 		<module>json</module>
@@ -189,6 +190,11 @@
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>http</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>html</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -363,6 +369,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${log4j-core}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
 				<version>${log4j-core}</version>
 			</dependency>
@@ -380,12 +391,7 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.alibaba.fastjson2</groupId>
-				<artifactId>fastjson2</artifactId>
-				<version>${fastjson2}</version>
-			</dependency>
+			</dependency> 
 			<dependency>
 				<groupId>org.apache.httpcomponents.client5</groupId>
 				<artifactId>httpclient5</artifactId>
@@ -546,6 +552,11 @@
 				<artifactId>disruptor</artifactId>
 				<version>${disruptor}</version>
 			</dependency> 
+			<dependency>
+				<groupId>org.jsoup</groupId>
+				<artifactId>jsoup</artifactId>
+				<version>${jsoup}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
