--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>1.9.1</version>
+		<version>2.2.1</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>1.2.5</version>
@@ -22,15 +22,15 @@
 
 	<properties> 
 		<jdk>1.8</jdk>   
-		<fastjson>1.2.80</fastjson>
-		<hibernate-core>5.4.33.Final</hibernate-core> 
-		<netty-all>4.1.76.Final</netty-all> 
-		<mongo-java-driver>3.12.10</mongo-java-driver>
-		<jedis>3.8.0</jedis> 
-		<poi>4.1.2</poi> 
-		<druid>1.2.9</druid>
+		<fastjson>2.0.9</fastjson>
+		<hibernate-core>5.6.10.Final</hibernate-core> 
+		<netty-all>4.1.79.Final</netty-all> 
+		<mongo-java-driver>3.12.11</mongo-java-driver>
+		<jedis>3.9.0</jedis> 
+		<poi>5.2.2</poi> 
+		<druid>1.2.11</druid>
 		<quartz>2.3.2</quartz>
-		<slf4j-api>1.7.34</slf4j-api>
+		<slf4j-api>1.7.36</slf4j-api>
 		<httpclient>4.5.13</httpclient>
 		<httpmime>4.5.13</httpmime>
 		<httpcore>4.4.15</httpcore>
@@ -46,10 +46,10 @@
 		<jxl>2.6.12</jxl>
 		<commons-compress>1.21</commons-compress> 
 		<commons-httpclient>3.1</commons-httpclient>
-		<hbase-client>2.4.11</hbase-client>
+		<hbase-client>2.4.13</hbase-client>
 		<asynchbase>1.8.2</asynchbase>
-		<mina-core>2.1.6</mina-core> 
-		<redisson>3.17.0</redisson>
+		<mina-core>2.2.0</mina-core> 
+		<redisson>3.17.5</redisson>
 		<commons-email>1.5</commons-email>
 		<commons-dbcp>1.4</commons-dbcp>
 		<commons-dbcp2>2.9.0</commons-dbcp2>
@@ -62,7 +62,7 @@
 		<xmemcached>2.4.7</xmemcached>
 		<struts2>2.5.30</struts2>
 		<xwork-core>2.3.37</xwork-core>
-		<spring>5.2.20.RELEASE</spring>
+		<spring>5.3.22</spring>
 		<hibernate-search>5.11.10.Final</hibernate-search>
 		<urlrewritefilter>4.0.4</urlrewritefilter> 
 	</properties> 
