--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.weicoder</groupId>
 		<artifactId>build</artifactId>
-		<version>2.2</version>
+		<version>2.3</version>
 	</parent>
 	<artifactId>weicoder</artifactId>
 	<version>3.5.3</version>
@@ -13,29 +11,31 @@
 
 	<properties>
 		<log4j-core>2.18.0</log4j-core>
-		<fastjson>2.0.9</fastjson> 
+		<fastjson>1.2.83</fastjson>
+		<fastjson2>2.0.11</fastjson2>
 		<hibernate-core>5.6.10.Final</hibernate-core>
-		<hibernate-envers>6.1.1.Final</hibernate-envers>
-		<mysql-connector-java>8.0.29</mysql-connector-java>
+		<hibernate-envers>6.1.2.Final</hibernate-envers>
+		<mysql-connector-java>8.0.30</mysql-connector-java>
 		<netty-all>4.1.79.Final</netty-all>
 		<mongo-java-driver>3.12.11</mongo-java-driver>
 		<influxdb-java>2.23</influxdb-java>
 		<flink-java>1.15.1</flink-java>
 		<jedis>4.2.3</jedis>
 		<jsoup>1.15.2</jsoup>
+		<aparapi>3.0.0</aparapi>
 		<seata>1.5.2</seata>
-		<kafka-clients>3.2.0</kafka-clients> 
-		<sofa-rpc>5.8.5</sofa-rpc>
+		<kafka-clients>3.2.1</kafka-clients>
+		<sofa-rpc>5.8.6</sofa-rpc>
 		<guava>31.1-jre</guava>
-		<elasticsearch-java>8.3.2</elasticsearch-java>
+		<elasticsearch-java>8.3.3</elasticsearch-java>
 		<poi>5.2.2</poi>
-		<tomcat-embed>10.0.22</tomcat-embed> 
+		<tomcat-embed>10.0.23</tomcat-embed>
 		<nacos-client>2.1.0</nacos-client>
-		<hadoop-client>3.3.3</hadoop-client>
-		<protobuf-java>3.21.2</protobuf-java>
+		<hadoop-client>3.3.4</hadoop-client>
+		<protobuf-java>3.21.4</protobuf-java>
 		<httpclient5>5.1.3</httpclient5>
 		<okhttp>4.10.0</okhttp>
-		<retrofit>2.10.6</retrofit> 
+		<retrofit>2.10.6</retrofit>
 		<HikariCP>5.0.1</HikariCP>
 		<solr-solrj>9.0.0</solr-solrj>
 		<snakeyaml>1.30</snakeyaml>
@@ -43,12 +43,12 @@
 		<druid>1.2.11</druid>
 		<shiro>1.9.1</shiro>
 		<curator-framework>5.3.0</curator-framework>
-		<hbase-client>2.4.13</hbase-client> 
-		<jackson-databind>2.13.3</jackson-databind>  
-		<xstream>1.4.19</xstream> 
-		<disruptor>3.4.4</disruptor> 
+		<hbase-client>2.4.13</hbase-client>
+		<jackson-databind>2.13.3</jackson-databind>
+		<xstream>1.4.19</xstream>
+		<disruptor>3.4.4</disruptor>
 		<commons-compress>1.21</commons-compress>
-		 
+
 		<!--   
 		<dom4j>2.1.3</dom4j>
 		<jaxen>1.2.0</jaxen>
@@ -94,9 +94,11 @@
 		<module>cache</module>
 		<module>csv</module>
 		<module>dao</module>
+		<module>disruptor</module>
 		<module>elasticsearch</module>
 		<module>email</module>
 		<module>excel</module>
+		<module>gpu</module>
 		<module>hbase</module>
 		<module>httpclient</module>
 		<module>http</module>
@@ -129,8 +131,8 @@
 		<module>flink</module>
 		<module>seata</module>
 	</modules>
-	
-	<profiles> 
+
+	<profiles>
 		<profile>
 			<id>jdk8</id>
 			<properties>
@@ -141,7 +143,7 @@
 	</profiles>
 
 	<dependencyManagement>
-		<dependencies>  
+		<dependencies>
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>common</artifactId>
@@ -164,6 +166,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.weicoder</groupId>
+				<artifactId>disruptor</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
 				<artifactId>elasticsearch</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -175,6 +182,11 @@
 			<dependency>
 				<groupId>com.weicoder</groupId>
 				<artifactId>excel</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.weicoder</groupId>
+				<artifactId>gpu</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -391,7 +403,12 @@
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson}</version>
-			</dependency> 
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba.fastjson2</groupId>
+				<artifactId>fastjson2</artifactId>
+				<version>${fastjson2}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents.client5</groupId>
 				<artifactId>httpclient5</artifactId>
@@ -436,7 +453,7 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi-ooxml</artifactId>
 				<version>${poi}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>co.elastic.clients</groupId>
 				<artifactId>elasticsearch-java</artifactId>
@@ -481,7 +498,7 @@
 				<groupId>org.apache.tomcat.embed</groupId>
 				<artifactId>tomcat-embed-jasper</artifactId>
 				<version>${tomcat-embed}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
@@ -551,11 +568,16 @@
 				<groupId>com.lmax</groupId>
 				<artifactId>disruptor</artifactId>
 				<version>${disruptor}</version>
-			</dependency> 
+			</dependency>
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
 				<version>${jsoup}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.aparapi</groupId>
+				<artifactId>aparapi</artifactId>
+				<version>${aparapi}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
