--- a/pom.xml
+++ b/pom.xml
@@ -11,34 +11,34 @@
 
 	<properties>
 		<log4j-core>2.18.0</log4j-core>
-		<fastjson>1.2.83</fastjson>
-		<fastjson2>2.0.11</fastjson2>
+		<fastjson>1.2.83_noneautotype</fastjson>
+		<fastjson2>2.0.12</fastjson2>
 		<hibernate-core>5.6.10.Final</hibernate-core>
 		<hibernate-envers>6.1.2.Final</hibernate-envers>
 		<mysql-connector-java>8.0.30</mysql-connector-java>
-		<netty-all>4.1.79.Final</netty-all>
+		<netty-all>4.1.80.Final</netty-all>
 		<mongo-java-driver>3.12.11</mongo-java-driver>
 		<influxdb-java>2.23</influxdb-java>
-		<flink-java>1.15.1</flink-java>
+		<flink-java>1.15.2</flink-java>
 		<jedis>4.2.3</jedis>
-		<jsoup>1.15.2</jsoup>
+		<jsoup>1.15.3</jsoup>
 		<aparapi>3.0.0</aparapi>
 		<seata>1.5.2</seata>
 		<kafka-clients>3.2.1</kafka-clients>
-		<sofa-rpc>5.8.6</sofa-rpc>
+		<sofa-rpc>5.8.7</sofa-rpc>
 		<guava>31.1-jre</guava>
-		<elasticsearch-java>8.3.3</elasticsearch-java>
+		<elasticsearch-java>8.4.0</elasticsearch-java>
 		<poi>5.2.2</poi>
 		<tomcat-embed>10.0.23</tomcat-embed>
-		<nacos-client>2.1.0</nacos-client>
+		<nacos-client>2.1.1</nacos-client>
 		<hadoop-client>3.3.4</hadoop-client>
-		<protobuf-java>3.21.4</protobuf-java>
+		<protobuf-java>3.21.5</protobuf-java>
 		<httpclient5>5.1.3</httpclient5>
 		<okhttp>4.10.0</okhttp>
 		<retrofit>2.10.6</retrofit>
 		<HikariCP>5.0.1</HikariCP>
 		<solr-solrj>9.0.0</solr-solrj>
-		<snakeyaml>1.30</snakeyaml>
+		<snakeyaml>1.31</snakeyaml>
 		<opencsv>5.6</opencsv>
 		<druid>1.2.11</druid>
 		<shiro>1.9.1</shiro>
