--- a/pom.xml
+++ b/pom.xml
@@ -10,47 +10,47 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<log4j-core>2.19.0</log4j-core>  
-		<fastjson2>2.0.21</fastjson2>
-		<hibernate-core>5.6.14.Final</hibernate-core>
-		<hibernate-envers>6.1.6.Final</hibernate-envers>
-		<mysql-connector-java>8.0.31</mysql-connector-java>
-		<netty-all>4.1.86.Final</netty-all>
-		<mongo-java-driver>3.12.11</mongo-java-driver>
+		<log4j-core>2.20.0</log4j-core>  
+		<fastjson2>2.0.26</fastjson2>
+		<hibernate-core>5.6.15.Final</hibernate-core>
+		<hibernate-envers>6.1.7.Final</hibernate-envers>
+		<mysql-connector-java>8.0.32</mysql-connector-java>
+		<netty-all>4.1.90.Final</netty-all>
+		<mongo-java-driver>3.12.12</mongo-java-driver>
 		<influxdb-java>2.23</influxdb-java>
-		<flink-java>1.16.0</flink-java>
-		<jedis>4.3.1</jedis>
-		<jsoup>1.15.3</jsoup>
+		<flink-java>1.17.0</flink-java>
+		<jedis>4.3.2</jedis>
+		<jsoup>1.15.4</jsoup>
 		<aparapi>3.0.0</aparapi>
 		<seata>1.6.1</seata>
-		<kafka-clients>3.3.1</kafka-clients>
-		<sofa-rpc>5.9.0</sofa-rpc>
+		<kafka-clients>3.4.0</kafka-clients>
+		<sofa-rpc>5.9.2</sofa-rpc>
 		<guava>31.1-jre</guava>
-		<elasticsearch-java>8.5.3</elasticsearch-java>
+		<elasticsearch-java>8.7.0</elasticsearch-java>
 		<poi>5.2.3</poi>
-		<tomcat-embed>10.1.4</tomcat-embed>
-		<nacos-client>2.2.0</nacos-client>
-		<hadoop-client>3.3.4</hadoop-client>
-		<protobuf-java>3.21.12</protobuf-java>
+		<tomcat-embed>10.1.7</tomcat-embed>
+		<nacos-client>2.2.1</nacos-client>
+		<hadoop-client>3.3.5</hadoop-client>
+		<protobuf-java>3.22.2</protobuf-java>
 		<httpclient5>5.2.1</httpclient5>
 		<okhttp>4.10.0</okhttp>
 		<retrofit>2.10.6</retrofit>
 		<HikariCP>5.0.1</HikariCP>
-		<solr-solrj>9.1.0</solr-solrj>
-		<snakeyaml>1.33</snakeyaml>
+		<solr-solrj>9.2.0</solr-solrj>
+		<snakeyaml>2.0</snakeyaml>
 		<opencsv>5.7.1</opencsv>
-		<druid>1.2.15</druid>
-		<shiro>1.10.1</shiro>
+		<druid>1.2.16</druid>
+		<shiro>1.11.0</shiro>
 		<curator-framework>5.4.0</curator-framework>
-		<hbase-client>2.5.2</hbase-client>
-		<jackson-databind>2.14.1</jackson-databind>
+		<hbase-client>2.5.3</hbase-client>
+		<jackson-databind>2.14.2</jackson-databind>
 		<xstream>1.4.20</xstream>
 		<disruptor>3.4.4</disruptor>
-		<commons-compress>1.22</commons-compress>
+		<commons-compress>1.23.0</commons-compress>
 
 		<!--    
-		<dom4j>2.1.3</dom4j>
-		<jaxen>1.2.0</jaxen>
+		<dom4j>2.1.3</dom4j>2.1.4
+		<jaxen>1.2.0</jaxen>2.0.0
 		<quartz>2.3.2</quartz>
 		<commons-email>1.5</commons-email>
 		<Memcached-Java-Client>3.0.2</Memcached-Java-Client> 
